1999-01-13  Alex Lancaster  <alex@santafe.edu>

	* README: Add notes regarding new randomization feature.

	* HeatbugModelSwarm.h (@interface): Add new BOOL iVar
	`randomizeHeatbugUpdateOrder' to class.

	* HeatbugModelSwarm.m ([HeatbugModelSwarm -buildActions]): Add a
	conditional test to set the defaultOrder of the
	`createActionForEach' action to `Randomize' if the
	`randomizeHeatbugUpdateOrder' flag is set.  Add comments in the
	code to explain the purpose and implementation of this feature.
	([HeatbugModelSwarm +createBegin:]): Set the
	`randomizeHeatbugUpdateOrder' flag to `NO' by default.
	Add a probe in the probeMap for this new flag.

1998-11-04  Alex Lancaster  <alex@santafe.edu>

	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm -buildObjects:]):
	In object creation change all calls of `[self getZone]' with
	`self'.  
	Don't explicitly create a `Zone' for the modelSwarm - it is
	created implicitly, when a subclass of `Swarm' is instantiated.
	Remove appropriate local variables.
	([HeatbugObserverSwarm -_update_]): In object creation change call
	of `[self getZone]' with `self'.
	([HeatbugObserverSwarm -buildActions]): Likewise.

	* HeatbugBatchSwarm.m ([HeatbugBatchSwarm -{buildObjects,
	buildActions}]): As for respective methods in
	HeatbugObserverSwarm.m.

	* HeatbugModelSwarm.m ([HeatbugModelSwarm -{buildObjects,
	buildActions}]): In object creation change all calls of `[self
	getZone]' with `self'.

	* HeatbugModelSwarm.m ([HeatbugModelSwarm -buildObjects]): Remove
	old commented-out code cruft pertaining to old random number
	library.

1998-10-06  Alex Lancaster  <alex@santafe.edu>

	* HeatSpace.[hm]: Add new class `HeatCell' for maintaining a list
	of points.
	([HeatSpace -findExtremeType:]): Add logic to maintain a list of
	sites of equal extreme heat and select randomly to remove bias.

	* Heatbug.m ([Heatbug -step]): When if the ideal (or random
	selected) position is the current location of the Heatbug - don't